# AutoRenewPayByPhone

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml
.github/: dependabot.yml
.github/actions/init/: action.yml
.github/workflows/: build.yml  lint.yml  publish.yml
back/: Cargo.toml  Dockerfile
back/src/: config.rs  main.rs  middleware.rs  paybyphone.rs
front/: Cargo.toml  Dioxus.toml  Dockerfile  build.rs
front/assets/: main.css
front/src/: check_login.rs  env.rs  home.rs  local_storage.rs  login.rs  main.rs  routes.rs  types.rs
front/src/components/: account_card.rs  home.rs  login.rs  mod.rs  park.rs
src/: config.rs  main.rs  paybyphone.rs  types.rs
