[package]
name = "AutoRenewPayByPhone"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
reqwest = "0.12.8"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
regex = "1.11.0"
log = { version = "0.4.22", features = [] }
chrono = { version = "0.4.38", features = ["serde"] }
