[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
regex = "1.11.0"
log = { version = "0.4.22", features = [] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
axum = "0.7.7"
http = "1.1.0"
dotenvy = "0.15.7"
axum-macros = "0.4.2"
async-recursion = "1.1.1"
