[package]
name = "back"
version = "0.1.0"
edition = "2021"
description = "Axum project for AutoPBF"
authors = ["remi-espie <remi.espie@etu.umontpellier.fr>"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
regex = "1.12.2"
log = "0.4.28"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
axum = "0.8.6"
http = "1.3.1"
dotenvy = "0.15.7"
